# azur-arknights-helper

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  justfile
.cargo/: config.toml
azur-arknights-helper/: package.json  pnpm-lock.yaml
azur-arknights-helper/src/: App.tsx
azur-arknights-helper/src-tauri/: Cargo.toml  tauri.conf.json
azur-arknights-helper/src-tauri/src/: main.rs
cli/: Cargo.toml
cli/src/: controller.rs  main.rs
cli/src/adb/: mod.rs
cli/src/adb/host/: mod.rs
cli/src/task/: mod.rs
cli/src/vision/: matcher.rs
notes/: Battle.md  BattleFormation.md  Draft.md  Task.md  TemplateMatching.md  Tile.md  dev_log.md  fft.md  level data.md  resource.md
old-resources/: manifest.toml  navigates.toml
old-resources/copilots/: 1-4.toml
old-resources/old_tasks/: press_collect_all_award.toml  recruit_all-light.toml  start_up.toml
old-resources/tasks/: award.toml
old-resources/tasks/navigates/: back.toml  enter_base.toml
resources/: manifest.toml  navigates.toml  tasks.toml
resources/copilots/: 1-4.toml  1-6.toml  1-7.toml  2-1.toml  5-10.toml
resources/minicap/arm64-v8a/: minicap-nopie
resources/minitouch/arm64-v8a/: minitouch
resources/minitouch/armeabi-v7a/: minitouch-nopie
resources/minitouch/x86/: minitouch-nopie
resources/minitouch/x86_64/: minitouch
resources/old_tasks/: back.toml  credit_buy-light.toml
resources/tasks/: award-light.toml  award.toml  back.toml  buy-light.toml  confirm-light.toml  confirm.toml  credit-light.toml  main_light_mission.toml  press_collect_all_award.toml  recruitment-light.toml  start_recruitment-light.toml  start_up.toml
resources/tasks/gakumasu/: gakumasu_start_kuyo.toml
resources/tasks/navigates/: back.toml  enter_base.toml  enter_mission.toml
src/: controller.rs  lib.rs  main.rs  sub.rs  task.rs  utils.rs
src/adb/host/: command.rs
src/android/: mod.rs
src/android/actions/: click.rs  click_match_template.rs  mod.rs  press.rs  swipe.rs
src/arknights/: mod.rs
src/arknights/actions/: choose_level.rs  mod.rs
src/arknights/actions/battle/: deploy.rs  retreat.rs  use_skill.rs
src/arknights/actions/copilot/: mod.rs
src/arknights/analyzer/: depot.rs  levels.rs  mod.rs
src/arknights/analyzer/battle/: deploy.rs  mod.rs
src/arknights/resource/: mod.rs
src/arknights/resource/manifest/: copilot.rs  mod.rs
src/config/: mod.rs  navigate.rs  task.rs
src/resource/: mod.rs
src/resource/manifest/: task.rs
src/task/: auto_recruit.rs  match_task.rs  mod.rs  wrapper.rs
src/task/builtins/: action_click.rs  action_click_match.rs  action_swipe.rs  mod.rs  multi.rs  navigate.rs
src/task/navigate/: mod.rs  page.rs
src/vision/: matcher.rs  mod.rs  utils.rs
src/vision/analyzer/: mod.rs  multi_match.rs  single_match.rs
src/vision/analyzer/matching/: mod.rs
src/vision/matcher/: best_matcher.rs  multi_matcher.rs  single_matcher.rs
test/android_resources/tasks/: arknights_wakeup.toml
xtasks/xtask-build-resources/: Cargo.toml
xtasks/xtask-build-resources/src/: main.rs
