[package]
name = "aah"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["packages/*"]

[workspace.dependencies]
aah-core = { path = "packages/aah-core" }
aah-cv = { path = "packages/aah-cv" }
aah-resource = { path = "packages/aah-resource" }
image = "0.25.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed = "8.5.0"
tokio-stream = "0.1.16"
git2 = "0.19.0"
iced = { version = "0.13.1", features = ["tokio", "image"] }
aah-core.workspace = true
aah-resource.workspace = true
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.11.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
reqwest = "0.12.7"
tokio = "1.40.0"
anyhow = "1.0.89"
async-channel = "2.3.1"
image.workspace = true

[build-dependencies]
zip = "2.2.0"
walkdir = "2.5.0"
anyhow = "1.0.89"