[package]
name = "aah"
version = "0.1.0"
edition = "2021"

[features]
default = ["arknights"]
arknights = ["android"]
android = []
pc = []

[workspace]
members = ["packages/*", "xtasks/*"]

[workspace.dependencies]
aah-controller = { path = "packages/aah-controller" }
aah-core = { path = "packages/aah-core" }
aah-cv = { path = "packages/aah-cv" }
aah-resource = { path = "packages/aah-resource" }
image = "0.25.5"
imageproc = "0.25.0"
anyhow = "1.0.89"
async-channel = "2.3.1"
serde = { version = "1.0"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aah-core.workspace = true
aah-resource.workspace = true
aah-controller.workspace = true
aah-cv.workspace = true
image.workspace = true
anyhow.workspace = true
async-channel.workspace = true
rust-embed = "8.5.0"
tokio-stream = "0.1.17"
iced = { version = "0.13.1", features = ["tokio", "image"] }
clap = { version = "4.5.28", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
reqwest = "0.12.7"
tokio = "1.43.0"
env_logger = "0.11.6"
serde = { workspace = true, features = ["derive"]}
toml = "0.8.8"
color-print = "0.3.5"
serde_with = { version = "3.8.3", features = ["macros"] }
log = "0.4.25"
bytes = "1.10.0"
serde_json = "1.0.138"
chrono = "0.4.39"
time = { version = "0.3.36", features = ["serde", "parsing", "macros"] }
zip = "2.2.2"
ocrs = "0.10.0"
imageproc.workspace = true
rten = "0.16.0"
